# libstrophe

./: CMakeLists.txt  conanfile.py  strophe.def
examples/: CMakeLists.txt
tests/: CMakeLists.txt
